# obs_avo_ws

./: README.md  package.xml  setup.py
launch/: gazebo_simulation_launch.py  obstacle_avoidance_launch.py
obstacle_avoidance/: lidar_node.py  obstacle_avoidance_node.py
