<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacle_avoidance</name>
  <version>0.0.0</version>
  <description>ROS2 Otonom Engel Tespiti ve Kaçınma Sistemi - Lidar sensörü kullanarak engelleri algılama ve çarpışmadan kaçınma</description>
  <maintainer email="merenbasol@gmail.com">ustad</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- ROS2 launch için -->
  <exec_depend>ros2launch</exec_depend>

  <!-- Gazebo ve simülasyon bağımlılıkları -->
  <depend>gazebo_ros</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_description</depend>

  <!-- Test bağımlılıkları -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
